# django_taskq

./: LICENSE  README.md  manage.py  pyproject.toml
django_taskq/: settings.py  urls.py
taskq/: apps.py
