[tool.poetry]
name = "django-taskq"
version = "0.1.0"
description = "A Django app a no thrills task queue"
authors = ["MHComm <support@mhcomm.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=2.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-django = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

